--- a/Uzd02/Uzd2_Sakele.Rmd
+++ b/Uzd02/Uzd2_Sakele.Rmd
@@ -10,12 +10,12 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 #Lejupielāde
-```{r}
+```{r cache=TRUE, warning=FALSE, message=FALSE}
 if (!require("RCurl")) install.packages("RCurl");library(RCurl)
 if (!require("archive")) install.packages("archive");library(archive)
 
-if (!dir.exists("Download")) {
-  dir.create("Download")
+if (!dir.exists("download")) {
+  dir.create("download")
 }
 
 
@@ -37,7 +37,7 @@ archive_extract(destfile, dir = "data")
 
 #Konvertācija un izmēri
 
-```{r}
+```{r cache=TRUE, warning=FALSE, message=FALSE}
 if (!require("sf")) install.packages("sf")
 library(sf)
 
@@ -59,11 +59,14 @@ st_write(shp, "converted_data/output.gpkg", driver = "GPKG")
 if (!require("sfarrow")) install.packages("sfarrow")
 library(sfarrow)
 st_write_parquet(shp, "converted_data/output.parquet")
+```
 
-
+```{r cache=TRUE, warning=FALSE}
 file.size("converted_data/output.parquet") # 21 795 679
 file.size("converted_data/output.gpkg") # 57 188 352
-file.size("data/nodala2651.shp") #27 090 844
+file.size("data/nodala2651.shp") #27 090 844 + pārējie ar slāni saistītie faili
+
+rm(shp)
 ```
 
 #Ielasīšanas laika mērījumi
@@ -72,7 +75,7 @@ if (!require("microbenchmark")) install.packages("microbenchmark")
 library(microbenchmark)
 ```
 
-```{r}
+```{r cache = TRUE}
 ielades_atrums <- microbenchmark(
   read_shape = st_read("data/nodala2651.shp"), # vidēji 9.6 sek
   read_gpkg = st_read("converted_data/output.gpkg"), # vidēji 6.5 sek
@@ -84,49 +87,46 @@ print(ielades_atrums)
 ```
 
 
-
-```{r}
-```
-
 #Failu apvienošana
 
-```{r}
-if (!dir.exists("data/apvienotie")) {
-  dir.create("data/apvienotie")
+```{r cache=TRUE}
+if (!dir.exists("data/combined")) {
+  dir.create("data/combined")
 }
 
 file_list <- list.files("data", pattern = "*shp$", full.names = TRUE)
 shapefile_list <- lapply(file_list, read_sf) #ielasa visus failus
 combined_shapefile <- do.call(rbind, shapefile_list) # apvieno vienā failā
-st_write(combined_shapefile, "data/apvienotie/Centra.shp") # ieraksta apvienoto failu uz diska
-```
+st_write(combined_shapefile, "data/combined/centra.gpkg", driver = "GPKG")
 
-
-```{r}
+rm(combined_shapefile, shapefile_list)
 ```
 
 #Ģeometriju pārbaude
-```{r}
+```{r cache=TRUE}
+centra_gpkg <- st_read("data/combined/centra.gpkg")
 
 # Pārbaudīt, vai visas ģeometrijas ir MULTIPOLYGON
-if(all(st_geometry_type(combined_shapefile) == "MULTIPOLYGON")) {
+if(all(st_geometry_type(centra_gpkg) == "MULTIPOLYGON")) {
   print("Visas ģeometrijas ir MULTIPOLYGON")
 } else {
   print("Dažas ģeometrijas nav MULTIPOLYGON")
   }
 
 # Pārbaudīt, vai nav tukšu ģeometriju
-if(any(st_is_empty(combined_shapefile))) {
+if(any(st_is_empty(centra_gpkg))) {
   print("Slānī ir tukšas ģeometrijas")
   # Izdzēst tukšās ģeometrijas
-  combined_shapefile <- combined_shapefile[!st_is_empty(combined_shapefile), ] 
+  centra_gpkg <- centra_gpkg[!st_is_empty(centra_gpkg), ] 
 }
 
 # Pārbaudīt, vai nav kļūdainu ģeometriju
-if(any(!st_is_valid(combined_shapefile))) {
+if(any(!st_is_valid(centra_gpkg))) {
   print("Slānī ir kļūdainas ģeometrijas")
+ # Salabot ķļūdainās ģeomtrijas
+  centra_gpkg <- st_make_valid(centra_gpkg)
   # Izdzēst kļūdainās ģeometrijas
-  combined_shapefile <- combined_shapefile[st_is_valid(combined_shapefile), ] 
+  centra_gpkg <- centra_gpkg[st_is_valid(centra_gpkg), ] 
 }
 
 ```
@@ -135,63 +135,90 @@ if(any(!st_is_valid(combined_shapefile))) {
 #Priežu meži
 
 ```{r}
+# Ģeometrijas vairs nav vajadzīgas, var izmanto arī parquet failu
+centra_df<-data.frame(centra_gpkg)
+rm(centra_gpkg)
+```
 
+```{r cache=TRUE}
+if (!require("dplyr")) install.packages("dplyr")
+library(dplyr)
 
-  rezultats_visi_sk_lauk <- combined_shapefile %>%
-  select(-geometry) %>%   #lai skaita bez ģeometrijas
-  slice(1:100) %>% # ātrais variants, pirmie ieraksti
-  pivot_longer(
-    cols = c(s10, s11, s12, s13, s14, g10, g11, g12, g13, g14), 
-    names_to = c(".value", "Group"), 
-    names_pattern = "([sg])(\\d+)"
-  ) %>%
-   group_by(objectid, s) %>%
-  summarise(Laukums = sum(g), .groups = "drop")
-  
-  rezultats_visi_sk_lauk
-  
-  #Klasificē par priežu mežiem
-  priedes <- rezultats_visi_sk_lauk %>%
-  group_by(objectid) %>%
-  summarise(
-    prop_priedes = ifelse(any(s == 1), sum(Laukums[s == 1]) / sum(Laukums), NA_real_),
-    PriezuMezi = ifelse(any(s == 1), ifelse(sum(Laukums[s == 1]) / sum(Laukums) >= 0.75, 1, 0), NA_real_),
-    .groups = "drop"
+pine_codes = c(1, 14, 22)
+centra_df <- centra_df %>%
+ mutate(
+   pine_basal_area = (
+      ifelse(s10 %in% pine_codes, g10, 0) +
+        ifelse(s11 %in% pine_codes, g11, 0) +
+        ifelse(s12 %in% pine_codes, g12, 0) +
+        ifelse(s13 %in% pine_codes, g13, 0) +
+        ifelse(s14 %in% pine_codes, g14, 0)),
+     
+  total_basal_area = g10+g11+g12+g13+g14,
+  prop_priede = pine_basal_area/total_basal_area,
+  PriezuMezi = ifelse(is.nan(prop_priede), 0, 
+               ifelse(prop_priede >= 0.75, 1, 0)) 
   )
-  
-  priedes
 
-#Priežu meži no visiem mežiem
-  sum(priedes$PriezuMezi, na.rm = TRUE)/n_distinct(priedes$objectid)
+centra_df$pine_basal_area<-NULL
+
+#Priežu meži no visiem mežiem mežaudze (zkat=="10")
+sum(centra_df$PriezuMezi)/nrow(centra_df[centra_df$zkat == "10", ])
+
 
 ```
 #Citi  meži
 
-Ja sugas, kas pieder konkrētam meža tipam, veido vismaz 75% šķerslaukuma, tad 
+Ja sugas, kas pieder konkrētam meža tipam, veido vismaz 75% šķērslaukuma, tad 
 tiek izskatīts, ka mežs ir attiecigā tipa. Pretējā gadījumā tas ir jauktu koku mežs, jo
 neviena sugu grupa nedominē.
 
-```{r}
+```{r cache=TRUE}
 #Sugu piederība
-skujkoki = c(1, 3, 13, 14, 15, 22, 23, 28, 29)
-platlapji = c( 10, 11, 12, 16, 17, 18, 19, 20, 21, 24, 25, 26, 27, 32, 35, 50, 61, 62, 63, 64, 65, 66, 67, 69)
-saurlapji = c(4, 6, 8, 9, 68)
+conifers_codes = c(1, 3, 13, 14, 15, 22, 23, 28, 29)
+broadleaves_codes = c( 10, 11, 12, 16, 17, 18, 19, 20, 21, 24, 25, 26, 27, 32, 35, 50, 61, 62, 63, 64, 65, 66, 67, 69)
+narrowleaves_codes = c(4, 6, 8, 9, 68)
 
-rezultats_visi_sk_lauk
-
-
-
-mezu_klasifik<-subset( rezultats_visi_sk_lauk, select = -geometry ) %>%
-group_by(objectid) %>%
-  summarize(koku_grupa = case_when(
-      sum(Laukums[s %in% saurlapji]) / sum(Laukums) >= 0.75 ~ "Šaurlapju mežs",
-      sum(Laukums[s %in% platlapji]) / sum(Laukums) >= 0.75 ~ "Platlapju mežs",
-      sum(Laukums[s %in% skujkoki]) / sum(Laukums) >= 0.75 ~ "Skujkoku mežs",
+# vispār te vajadzētu funkciju
+centra_df <- centra_df%>%
+  filter(zkat=='10') %>% #tikai mežaudzes
+  mutate(
+    conifers_basal_area = 
+      (s10 %in% conifers_codes * g10) + 
+      (s11 %in% conifers_codes * g11) + 
+      (s12 %in% conifers_codes * g12) + 
+      (s13 %in% conifers_codes * g13) + 
+      (s14 %in% conifers_codes * g14),
+    broadleaves_basal_area = 
+      (s10 %in% broadleaves_codes * g10) + 
+      (s11 %in% broadleaves_codes * g11) + 
+      (s12 %in% broadleaves_codes * g12) + 
+      (s13 %in% broadleaves_codes * g13) + 
+      (s14 %in% broadleaves_codes * g14),
+    narrowleaves_basal_area = 
+      (s10 %in% narrowleaves_codes * g10) + 
+      (s11 %in% narrowleaves_codes * g11) + 
+      (s12 %in% narrowleaves_codes * g12) + 
+      (s13 %in% narrowleaves_codes * g13) + 
+      (s14 %in% narrowleaves_codes * g14),
+    forest_type=
+      case_when(
+      narrowleaves_basal_area / total_basal_area >= 0.75 ~ "Šaurlapju mežs",
+      broadleaves_basal_area / total_basal_area >= 0.75 ~ "Platlapju mežs",
+      conifers_basal_area / total_basal_area >= 0.75 ~ "Skujkoku mežs",
       TRUE ~ "Jauktu koku mežs")
   )
-    
-  mezu_klasifik
 
+
+```
+
+```{r}
+nrows=nrow(centra_df)
+forest_ratios<-centra_df %>%
+  group_by(forest_type) %>%
+  summarize(ratio = n() / nrows) 
+
+forest_ratios
 ```
 
 
@@ -200,8 +227,9 @@ group_by(objectid) %>%
 
 unlink("data", recursive = TRUE)
 unlink("converted_data", recursive = TRUE)
-unlink("Download", recursive = TRUE)
+unlink("download", recursive = TRUE)
 
+rm(centra_df)
 ```
 
 
